feat: Enhance mobile experience and app structure
Improves the mobile-first experience by optimizing the viewport meta tag for better handling of safe areas and disabling scaling. This commit also introduces a service worker for offline capabilities and better caching, essential for a robust mobile application.

The project's package name has been corrected, and metadata has been updated to reflect requested frame permissions for camera and microphone.

Type definitions have been expanded to include more message types (video, audio, document, location), reply functionality, reactions, and disappearing message modes for chat sessions. New types for active calls and app settings have been added to support future features.

UI components have been updated with new icons and improved functionality. Chat features now include better file handling with size and duration formatting, and new message types are supported. Tab screens include enhanced navigation and readiness for new features like settings and notifications.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Updated viewport for mobile: prevents zooming, handles safe areas (notch), disables scaling -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="manifest" href="/manifest.json">
     <title>PingSpace</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -39,6 +45,18 @@
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #ff1744; 
+      }
+      /* Hide scrollbar for clean mobile look but keep functionality */
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+      .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
+      /* Prevent pull-to-refresh on mobile to feel more like an app */
+      body {
+        overscroll-behavior-y: none;
       }
     </style>
   <script type="importmap">
