--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
