--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
-    "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js",
-    "firebase/storage": "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.88.0"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.49.1",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
