--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <base href="/PingSpace_App/">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='120' fill='%23ff1744'/%3E%3Cpath d='M298.67 42.67L64 320h170.67L192 469.33L426.67 192H256L298.67 42.67z' fill='white'/%3E%3C/svg%3E">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='120' fill='%23ff1744'/%3E%3Cpath d='M298.67 42.67L64 320h170.67L192 469.33L426.67 192H256L298.67 42.67z' fill='white'/%3E%3C/svg%3E">
     <link rel="manifest" href="manifest.json">
     <title>PingSpace</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -52,5 +55,6 @@
 </head>
   <body class="bg-gray-50 text-slate-900 overflow-hidden dark:bg-slate-950 dark:text-white transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
